--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -8,4 +8,41 @@
 
 <body>
     <h1>Sushi</h1>
+
+    <img src="../images/sushi.jpg" height="300">
+
+
+    <h2>Description</h2>
+    <p>
+        This is a sushi recipe.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li> 1 lb. salmon</li>
+        <li> 1 1/4 cups water</li>
+        <li> 1 cup uncooked glutinous white rice (sushi rice)</li>
+        <li>3 tablespoons rice vinegar</li>
+        <li>1 avocado - peeled, pitted and sliced</li>
+        <li>1/2 cup cucumber - peeled, pitted and sliced</li>
+        <li>4 sheets nori (dry seaweed)</li>
+        <li>1 pinch salt</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine the water and rice in a saucepan and bring to a boil. Cover, reduce heat to low and simmer for 20
+            minutes, or until rice is tender and water has been absorbed. Remove from the heat and stir in the vinegar
+            and a pinch of salt. Set aside to cool. </li>
+        <li>In a large bowl, combine the salmon, cucumber, avocado, nori, and salt. Mix well. </li>
+        <li>Cover a bamboo sushi mat with plastic wrap to keep the rice from sticking. Place a sheet of seaweed over the
+            plastic. Use your hands to spread the rice evenly onto the sheet, leaving about 1/2 inch of seaweed empty at
+            the bottom. Arrange strips of cucumber and avocado across the center of the rice. Lift the mat and roll over
+            the vegetables once and press down. Unroll, then roll again towards the exposed end of the seaweed sheet to
+            make a long roll. You may moisten with a little water to help seal. Set aside and continue with remaining
+            nori sheets, rice and fillings. </li>
+        <li>Use a sharp wet knife to slice the rolls into 5 or 6 slices. Serve cut side up with your favorite sushi
+            condiments. </li>
+
+    </ol>
+
 </body>
