--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Home</title>
-    </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Home</title>
+</head>
+
+<body>
+    <h1>Odin Recipes</h1>
+
+    <ul>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/sushi.html">Sushi</a></li>
+        <li><a href="./recipes/waffle.html">Waffle</a></li>
+
+    </ul>
+</body>
+
 </html>
